--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "iron-session": "^8.0.4",
     "lucide-react": "^0.541.0",
     "mongodb": "^6.18.0",
     "next": "15.5.0",
