--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.18.0",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "pretty-bytes": "^7.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
+    "@types/matter-js": "^0.20.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
