--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "mongodb-viewer",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "packageManager": "pnpm@10.15.0",
-  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "biome check",
-    "format": "biome format --write"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -30,14 +31,24 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.0",
+    "@antfu/eslint-config": "^5.2.1",
+    "@eslint-react/eslint-plugin": "^1.52.6",
     "@tailwindcss/postcss": "^4",
     "@types/matter-js": "^0.20.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.33.0",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*": "pnpm lint"
   }
 }
